--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -433,6 +433,17 @@ jobs:
           path: otp_doc_html.tar.gz
       - name: Run html link check
         run: docker run -v $PWD/:/github otp "cd /github/docs && /github/scripts/otp_check_html_links.exs"
+  
+  vulnerability:
+    name: Run vulnerability analysis
+    runs-on: ubuntu-latest
+    needs: pack
+    steps:
+      - uses: actions/checkout@v4.1.7
+      - uses: ./.github/actions/build-base-image
+        with:
+            BASE_BRANCH: ${{ env.BASE_BRANCH }}
+      - uses: google/osv-scanner-action/.github/workflows/osv-scanner-reusable.yml@v1.8.5
 
   static:
     name: Run static analysis
