--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.194.0/containers/cpp
+// SPDX-License-Identifier: Apache-2.0
+// SPDX-FileCopyrightText: Erlang/OTP and contributors
 {
 	"name": "Erlang/OTP",
 	"build": {
