--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,9 @@
 ;
 ; To use this from emacs install the editorconfig package
 
+; SPDX-License-Identifier: Apache-2.0
+; SPDX-FileCopyrightText: Erlang/OTP and contributors
+
 root = true
 
 [*]
