--- a/.ort.yml
+++ b/.ort.yml
@@ -24,7 +24,7 @@ excludes:
       reason: "OTHER"
       comment: "This file contains all licenses used in Erlang/OTP. Not relevant"
 
-    - pattern: "CONTRIBUTING"
+    - pattern: "CONTRIBUTING.md"
       reason: "OTHER"
       comment: "This file contains needs to specify its license"
 
@@ -47,14 +47,14 @@ excludes:
 # analyzer, scanner ignores them
 # evaluator mentions rule_violations as ERRORs, but also marks how many errors were resolved
 #
-resolutions:
-    # Rule Violations allows us to argue about why we can skip
-    # the violation or why it does not apply
-    rule_violations:
+# resolutions:
+#     # Rule Violations allows us to argue about why we can skip
+#     # the violation or why it does not apply
+#     rule_violations:
 
-      - message: ".*copyleft-limited categorized license LGPL-2.1-or-later was detected.*"
-        reason: "PATENT_GRANT_EXCEPTION"
-        comment: "Autoconf-exception-generic-3.0 allows its usage"
+#       - message: ".*copyleft-limited categorized license LGPL-2.1-or-later was detected.*"
+#         reason: "PATENT_GRANT_EXCEPTION"
+#         comment: "Autoconf-exception-generic-3.0 allows its usage"
 
 #       - message: ".*The license GPL-3.0-or-later WITH Autoconf-exception-generic-3.0 is currently not covered by policy rules.*"
 #         reason: "PATENT_GRANT_EXCEPTION"
@@ -105,34 +105,33 @@ curations:
       - path: "erts/autoconf/config.guess"
         reason: "DOCUMENTATION_OF"
         comment: "The scanner incorrectly categorises a dual license"
-        concluded_license: "GPL-3.0-or-later"
-
-      - path: "lib/common_test/test_server/config.guess"
-        reason: "DOCUMENTATION_OF"
-        comment: "The scanner incorrectly categorises a dual license"
-        concluded_license: "GPL-3.0-or-later"
-
-      - path: "make/autoconf/config.guess"
-        reason: "DOCUMENTATION_OF"
-        comment: "The scanner incorrectly categorises a dual license"
-        concluded_license: "GPL-3.0-or-later"
-
-      - path: "make/autoconf/config.sub"
-        reason: "DOCUMENTATION_OF"
-        comment: "The scanner incorrectly categorises a dual license"
-        concluded_license: "GPL-3.0-or-later"                
-
-      - path: "lib/common_test/test_server/config.sub"
-        reason: "DOCUMENTATION_OF"
-        comment: "The scanner incorrectly categorises a dual license"
-        concluded_license: "GPL-3.0-or-later"
-        
+        concluded_license: "GPL-3.0-or-later WITH Autoconf-exception-generic-3.0"
 
       - path: "erts/autoconf/config.sub"
         reason: "DOCUMENTATION_OF"
         comment: "The scanner incorrectly categorises a dual license"
-        concluded_license: "GPL-3.0-or-later"        
+        concluded_license: "GPL-3.0-or-later WITH Autoconf-exception-generic-3.0"        
+
+      - path: "lib/common_test/test_server/config.guess"
+        reason: "DOCUMENTATION_OF"
+        comment: "The scanner incorrectly categorises a dual license"
+        concluded_license: "GPL-3.0-or-later WITH Autoconf-exception-generic-3.0"
+
+      - path: "lib/common_test/test_server/config.sub"
+        reason: "DOCUMENTATION_OF"
+        comment: "The scanner incorrectly categorises a dual license"
+        concluded_license: "GPL-3.0-or-later WITH Autoconf-exception-generic-3.0"        
         
+      - path: "make/autoconf/config.guess"
+        reason: "DOCUMENTATION_OF"
+        comment: "The scanner incorrectly categorises a dual license"
+        concluded_license: "GPL-3.0-or-later WITH Autoconf-exception-generic-3.0"
+
+      - path: "make/autoconf/config.sub"
+        reason: "DOCUMENTATION_OF"
+        comment: "The scanner incorrectly categorises a dual license"
+        concluded_license: "GPL-3.0-or-later WITH Autoconf-exception-generic-3.0"
+
       - path: "erts/autoconf/install-sh"
         reason: "INCORRECT"
         comment: "The scanner incorrectly categorises the license"
@@ -146,12 +145,12 @@ curations:
       - path: "erts/emulator/asmjit/core/support.h"
         reason: "INCORRECT"
         comment: "The scanner incorrectly categorises the license"
-        concluded_license: "Public-Domain"
+        concluded_license: "Zlib"
 
       - path: "erts/emulator/pcre/LICENCE"
         reason: "INCORRECT"
         comment: "The scanner incorrectly categorises the license"
-        concluded_license: "Public-Domain"
+        concluded_license: "BSD-3-Clause"
 
       - path: "erts/lib_src/yielding_c_fun/test/examples/sha256_erlang_nif/c_src/sha-2/README.md"
         reason: "INCORRECT"
@@ -172,12 +171,7 @@ curations:
         reason: "INCORRECT"
         comment: "The scanner incorrectly categorises the license"
         concluded_license: "Public-Domain"
-
-      - path: "lib/kernel/test/zlib_SUITE_data/zipdoc"
-        reason: "INCORRECT"
-        comment: "The scanner incorrectly categorises the license"
-        concluded_license: "Public-Domain"
-
+        
       - path: "erts/emulator/zlib/inffast.c"
         reason: "INCORRECT"
         comment: "The scanner incorrectly categorises a dual license"
@@ -433,7 +427,6 @@ curations:
         comment: "The scanner incorrectly categorises a dual license"
         concluded_license: "Apache-2.0 OR LGPL-2.1-or-later"
 
-
       - path: "lib/diameter/doc/notes.md"
         reason: "INCORRECT"
         comment: "The scanner assumes NOASSERTION when it is Apache"
@@ -656,16 +649,15 @@ curations:
         comment: "The scanner incorrectly categorises the license"
         concluded_license: "Apache-2.0 OR BSL-1.0"
 
-        # PCRE License on documentation
       - path: "erts/emulator/pcre/LICENCE"
         reason: "INCORRECT"
         comment: "The scanner incorrectly categorises the license"
-        concluded_license: "PCRE"
+        concluded_license: "BSD-3-Clause"
 
       - path: "erts/emulator/pcre/README.pcre_update.md"
         reason: "INCORRECT"
         comment: "The scanner incorrectly categorises the license"
-        concluded_license: "PCRE"
+        concluded_license: "BSD-3-Clause"
 
       - path: "erts/etc/unix/jit-reader.h"
         reason: "INCORRECT"
@@ -682,4 +674,62 @@ curations:
         comment: "The scanner incorrectly categorises the license"
         concluded_license: "Public-Domain"        
 
-        
+      - path: "lib/erl_interface/src/openssl/include/openssl_local/md5.h"
+        reason: "INCORRECT"
+        comment: "The scanner incorrectly categorises the license"
+        concluded_license: "Apache-2.0"
+
+      - path: "lib/erl_interface/src/openssl/include/crypto/md32_common.h"
+        reason: "INCORRECT"
+        comment: "The scanner incorrectly categorises the license"
+        concluded_license: "Apache-2.0"
+
+      - path: "lib/erl_interface/src/openssl/crypto/md5/md5_local.h"
+        reason: "INCORRECT"
+        comment: "The scanner incorrectly categorises the license"
+        concluded_license: "Apache-2.0"
+
+      - path: "lib/erl_interface/src/openssl/crypto/md5/md5_dgst.c"
+        reason: "INCORRECT"
+        comment: "The scanner incorrectly categorises the license"
+        concluded_license: "Apache-2.0"        
+
+      - path: "lib/erl_interface/src/openssl/README"
+        reason: "INCORRECT"
+        comment: "The scanner incorrectly categorises the license"
+        concluded_license: "Apache-2.0"        
+
+      - path: "lib/crypto/doc/guides/licenses.md"
+        reason: "INCORRECT"
+        comment: "The scanner incorrectly categorises the license"
+        concluded_license: "Apache-2.0"        
+
+      - path: "erts/emulator/openssl/include/openssl_local/md5.h"
+        reason: "INCORRECT"
+        comment: "The scanner incorrectly categorises the license"
+        concluded_license: "Apache-2.0"
+
+      - path: "erts/emulator/openssl/include/crypto/md32_common.h"
+        reason: "INCORRECT"
+        comment: "The scanner incorrectly categorises the license"
+        concluded_license: "Apache-2.0"        
+
+      - path: "erts/emulator/openssl/crypto/md5/md5_local.h"
+        reason: "INCORRECT"
+        comment: "The scanner incorrectly categorises the license"
+        concluded_license: "Apache-2.0"        
+
+      - path: "erts/emulator/openssl/crypto/md5/md5_dgst.c"
+        reason: "INCORRECT"
+        comment: "The scanner incorrectly categorises the license"
+        concluded_license: "Apache-2.0"        
+
+      - path: "erts/emulator/openssl/README"
+        reason: "INCORRECT"
+        comment: "The scanner incorrectly categorises the license"
+        concluded_license: "Apache-2.0"
+
+      - path: "erts/emulator/openssl/README"
+        reason: "INCORRECT"
+        comment: "The scanner incorrectly categorises the license"
+        concluded_license: "Apache-2.0"
